<resources>
    <string name="app_name">FitnesssDemo</string>
    <string name="home">Sức Khỏe</string>
    <string name="together">Cộng Đồng</string>
    <string name="discover">Khám Phá</string>
    <string name="tillte_step">Bắt đầu tập luyện và đếm bước chân của bạn nào!</string>
    <string name="tillet1_step">-----------------------------------------------</string>
    <string name="tillet2_step">12AM     12PM     12AM</string>
    <string name="exercise">Thể dục</string>
    <string name="water">Nước</string>
    <string name="walk">Đi bộ</string>
    <string name="food">Thức ăn</string>
    <string name="manager">Quản lý cân nặng</string>
    <string name="target">Tạo mục tiêu cân năng của ban!</string>
    <string name="record">Xem</string>
    <string name="start">Bắt đầu</string>
    <string name="add">Thêm</string>
    <string name="food_default">/2150kcal</string>
    <string name="water_default">/8 Ly</string>
    <string name="title_exercise">Sức khỏe bên ngoài bắt đầu từ bên trong!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_excercise">ExcerciseActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_water">WaterActivity</string>
    <string name="title_activity_weight_management">WeightManagementActivity</string>
    <string name="title_activity_walk">WalkActivity</string>
</resources>
