<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/positive_total"
    tools:context=".fragment.HomeFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:background="@color/positive_total"
        android:padding="@dimen/padding_total"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/home"
                android:textColor="@color/title_text_total"
                android:textSize="@dimen/toolbartext"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/ideal"
                android:layout_width="@dimen/scoll"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/positive_total"
                android:src="@drawable/idea_24px" />

            <ImageButton
                android:id="@+id/personal"
                android:layout_width="@dimen/scoll"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/positive_total"
                android:src="@drawable/user_25px" />

            <ImageButton
                android:id="@+id/more"
                android:layout_width="@dimen/scoll"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/positive_total"
                android:src="@drawable/menu_2_24px" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    
    <ScrollView
        android:layout_below="@id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/scoll"
        android:layout_marginEnd="@dimen/scoll"
        android:layout_marginBottom="@dimen/scoll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/boder"
            android:layout_marginLeft="@dimen/boder"
            android:layout_marginEnd="@dimen/boder"
            android:layout_marginRight="@dimen/boder"
            android:layout_marginBottom="@dimen/boder"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line200dp"
                android:layout_margin="@dimen/magin"
                android:background="@drawable/boder_boder"
                android:orientation="vertical">

                <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_125px"
                android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tillte_step"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tillet1_step"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/padding_drawable"
                    android:text="@string/tillet2_step"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line100dp"
                android:layout_margin="@dimen/magin"
                android:background="@drawable/boder_boder"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/weightlift_35px"
                        android:layout_gravity="left"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/exercise" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:background="@drawable/border"
                        android:id="@+id/startbtn"
                        android:text="@string/start"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_drawable"
                    android:layout_gravity="center"
                    android:text="@string/title_exercise"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line100dp"
                android:layout_margin="@dimen/magin"
                android:background="@drawable/boder_boder"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/magin"
                        android:src="@drawable/water_glass_35px"
                        android:layout_gravity="left"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magin"
                        android:text="@string/water" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/magin_left"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="0"
                        android:textSize="@dimen/textzise_foodwater"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:layout_margin="@dimen/magin"
                        android:text="@string/water_default"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/magin"
                        android:src="@drawable/minus_25px" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/magin"
                        android:src="@drawable/plus_25px" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line100dp"
                android:layout_margin="@dimen/magin"
                android:background="@drawable/boder_boder"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:src="@drawable/food_35px"
                        android:layout_gravity="left"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:background="@drawable/border"
                        android:text="@string/add"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/magin_left"
                        android:textStyle="bold"
                        android:text="0"
                        android:textSize="@dimen/textzise_foodwater"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magin"
                        android:text="@string/food_default"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line100dp"
                android:layout_margin="@dimen/magin"
                android:background="@drawable/boder_boder"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magin"
                        android:layout_weight="1"
                        android:src="@drawable/scales_35px"
                        android:layout_gravity="left"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/manager" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:background="@drawable/border"
                        android:text="@string/record"/>

                </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/magin"
                        android:text="@string/target" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>